# OsirisRE

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.txt
compiler_wrapper/: CMakeLists.txt
compiler_wrapper/src/: main.cpp
dll_wrapper/: CMakeLists.txt  OsirisDLL.def
dll_wrapper/include/: OsiCommon.h  OsiSmartBuf.h  Osiris.h  OsirisFuncs.h
osi_extender/: CMakeLists.txt  main.cpp  osi_extender.ini
re/: CMakeLists.txt  README.txt
re/src/: Factory.h  FunctionParseData.cpp  FunctionParseData.h  KeyList.h  List.h  OsiCommon.cpp  OsiDIVObjectData.cpp  OsiDIVObjectData.h  OsiFunctionData.cpp  OsiFunctionData.h  OsiGlobal.h  OsiSmartBuf.h  OsiTypedValue.cpp  OsiTypedValue.h  Osiris.cpp  Osiris.h  OsirisFuncs.cpp  OsirisLogging.cpp  OsirisLogging.h  Rete.cpp  Rete.h  ReteDBase.cpp  ReteDBase.h  SearchIndex.h
